<resources>
    <string name="app_name">PayMentService</string>
    <string name="google_play_services">Google play services are not available.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Landline">Landline</string>
    <string name="Postpaid">Postpaid</string>
    <string name="DTH">DTH</string>
    <string name="Prepaid">Prepaid</string>
    <string name="Recharge">Recharge</string>
    <string name="Mobile_number">Enter Mobile Number</string>
    <string name="EAmount">Enter Amount</string>
    <string name="Bill_Payment">Bill Payment</string>
    <string name="Electricity">Electricity</string>
    <string name="Gas">Gas</string>
    <string name="Hotel">Hotel</string>
    <string name="All_Services">All Services</string>
    <string name="DTH_Connection">DTH\nConnection</string>
    <string name="Credit_Card">Credit Card</string>
    <string name="HLoan_EMIotel">Loan EMI</string>
    <string name="Others">Others</string>
    <string name="Water">Water</string>
    <string name="Insurance">Insurance</string>
    <string name="Brodband">Brodband</string>
    <string name="Add_Money">Add Money</string>
    <string name="My_QR">My QR</string>
    <string name="Transaction">Transaction\nReport</string>
    <string name="DMT">DMT$AePS</string>
    <string name="Railway_Ticket">Railway Ticket</string>
    <string name="Flights_Tickets">Flights Tickets</string>
    <string name="Bus_Ticket">Bus Ticket</string>
    <string name="Total_balance">Total Balance</string>
    <string name="Today">Today\'s sale</string>
    <string name="Search">Search</string>
    <string name="Fdate">From Date</string>
    <string name="Todate">To Date</string>
    <string name="Today_Repoart">Today\'s sale \n Report</string>
    <string name="Wallet_Balance">Wallet Balance</string>
    <string name="Uilities">Uilities</string>
    <string name="Date">Date</string>
    <string name="Type">Type</string>
    <string name="Mode">Mode</string>
    <string name="FASTage">FASTage</string>
    <string name="Booking">Booking</string>
    <string name="Gift">Gift Vauchers</string>
    <string name="transactionhstory">Transaction\nHistory</string>
    <string name="transactionid">Txn Id</string>
    <string name="Amount">Amount</string>
    <string name="Status">Status</string>
    <string name="transactionRepoart">Transaction\nReport</string>
    <string name="Deposithstory">Deposit History</string>
    <string name="PaymentHistore">Payment History</string>
    <string name="Create_Account">Registraion </string>
    <string name="Walletsummary">Wallet Summary</string>
    <string name="MyEarning">My Earning</string>
    <string name="Utilities1">Utilities \n Payments</string>
    <string name="Google">Google Play \n Store</string>
    <string name="Cashbackrepoart">Cashback\nReport</string>
    <string name="QrCollectionrepoart">QR Collection \n Report</string>
    <string name="Rechargerepoart">Recharge Report</string>
    <string name="DTHrepoart">DTH Report</string>
    <string name="Waterrepoart">Water Report</string>

</resources>