<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/_4sdp"
        android:elevation="@dimen/_10sdp"
        android:background="#BCFFFFFF"
        app:cardCornerRadius="@dimen/_5sdp"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="match_parent"
                            android:text="@string/transactionid"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:textFontWeight="400"/>
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="abc2522s"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:textSize="@dimen/_10sdp"
                            android:gravity="center_vertical"
                            android:layout_weight="0.9"
                            android:textColor="@color/black"
                            android:textFontWeight="400"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="@string/Amount"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:textFontWeight="400"/>
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="\u20B9 0.00"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="start"
                            android:paddingStart="@dimen/_3sdp"
                            android:layout_weight="0.9"
                            android:textColor="@color/black"
                            android:textFontWeight="400"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="match_parent"
                            android:text="@string/Date"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:textFontWeight="400"/>
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="DD-MM-YYYY"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:textSize="@dimen/_10sdp"
                            android:gravity="center_vertical"
                            android:layout_weight="0.9"
                            android:textColor="@color/black"
                            android:textFontWeight="400"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="@string/Type"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:textFontWeight="400"/>
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="Credit"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="start"
                            android:paddingStart="@dimen/_3sdp"
                            android:layout_weight="0.9"
                            android:textColor="@color/black"
                            android:textFontWeight="400"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="match_parent"
                            android:text="@string/Mode"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:textFontWeight="400"/>
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="Commission"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:textSize="@dimen/_10sdp"
                            android:gravity="center_vertical"
                            android:layout_weight="0.9"
                            android:textColor="@color/black"
                            android:textFontWeight="400"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="@string/Status"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:textFontWeight="400"/>
                        <TextView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:text="Active"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:gravity="start"
                            android:paddingStart="@dimen/_3sdp"
                            android:layout_weight="0.9"
                            android:textColor="@color/black"
                            android:textFontWeight="400"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>