<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.PrepaidActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:ems="10"
                        android:hint="@string/Mobile_number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:inputType="number"
                        android:textSize="@dimen/_14sdp"
                        android:drawablePadding="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp"
                        android:background="@drawable/customedittext"
                        android:drawableStart="@drawable/ic_baseline_tablet_mac_24"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:ems="10"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:hint="@string/EAmount"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:inputType="number"
                        android:textSize="@dimen/_14sdp"
                        android:drawablePadding="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp"
                        android:background="@drawable/customedittext"
                        android:drawableStart="@drawable/rupee"/>

                    <Spinner
                        android:id="@+id/spoperator"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/customspinner"
                        />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_4sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_6sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:background="@drawable/wallet1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:gravity="start"
                        android:paddingStart="@dimen/_10sdp"
                        android:text="\u20B9 0.00"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="#300D83"
                    android:text="@string/Recharge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.309"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>