<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.WalletSummaryActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/rounded_button2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/rounded_button"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="13dp">
                        <ImageView
                            android:id="@+id/imgfrom"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:background="@drawable/calendar"
                            app:layout_constraintBottom_toBottomOf="@+id/imgto"
                            app:layout_constraintEnd_toStartOf="@+id/edfromdate"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="spread"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imgto" />
                        <TextView
                            android:id="@+id/edfromdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/Fdate"
                            android:text="22-06-2022"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            app:layout_constraintBottom_toBottomOf="@+id/imgto"
                            app:layout_constraintEnd_toStartOf="@+id/imgto"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/imgfrom"
                            app:layout_constraintTop_toTopOf="@+id/imgto" />
                        <ImageView
                            android:id="@+id/imgto"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:background="@drawable/calendar"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/edtodate"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/edfromdate"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/edtodate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/Todate"
                            android:text="22-06-2022"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            app:layout_constraintBottom_toBottomOf="@+id/imgto"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/imgto"
                            app:layout_constraintTop_toTopOf="@+id/imgto" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:orientation="horizontal"
                        android:background="@drawable/rounded_button"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp">
                        <EditText
                            android:layout_width="@dimen/_180sdp"
                            android:layout_height="match_parent"
                            android:hint="Transaction Number"
                            android:background="@null"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:layout_marginLeft="@dimen/_10sdp" />
                        <View
                            android:layout_width="@dimen/_1sdp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:background="@color/black"/>
                        <Button
                            android:id="@+id/btnsearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Search"
                            android:backgroundTint="#300D83"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:textColor="@color/white"
                            android:layout_marginLeft="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_activeproperty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:divider="@null"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ImageView
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_250sdp"
                    tools:ignore="MissingConstraints"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/datanotfound"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>